--- a/popup/menu.html
+++ b/popup/menu.html
@@ -7,7 +7,8 @@
 
   <body>
     <div id="popup-content">
-      <div class="button">Hide</div>
+      <div class="button">Hide Spoilers</div>
+      <div class="button">Show Spoilers</div>
     </div>
     <div id="error-content" class="hidden">
       <p>Can't hide these timestamps sorry.</p>
