--- a/popup/menu.html
+++ b/popup/menu.html
@@ -7,11 +7,15 @@
 
   <body>
     <div id="popup-content">
-      <div class="button">Hide Spoilers</div>
-      <div class="button">Show Spoilers</div>
+      <div id="timestamp" class="button timestamp">Timestamps Off/On</div>
+      <div id="timestampjs" class="button timestamp">Timestamps JS Off</div>
+      <div id="percentages" class="button timestamp">Percentages Off/On</div>
+      <div id="titles" class="button timestamp">Titles Off/On</div>
+      <div id="all" class="button timestamp">All</div>
+      <div id="reset" class="button reset">Reset</div>
     </div>
     <div id="error-content" class="hidden">
-      <p>Can't hide these timestamps sorry.</p>
+      <p>Can't hide these sorry.</p>
     </div>
     <script src="menu.js"></script>
   </body>
