--- a/popup/menu.html
+++ b/popup/menu.html
@@ -7,16 +7,42 @@
 
   <body>
     <div id="popup-content">
-      <div id="timestamp" class="button timestamp">Timestamps Off/On</div>
-      <div id="timestampjs" class="button timestamp">Timestamps JS Off</div>
-      <div id="percentages" class="button timestamp">Percentages Off/On</div>
-      <div id="titles" class="button timestamp">Titles Off/On</div>
-      <div id="all" class="button timestamp">All</div>
-      <div id="reset" class="button reset">Reset</div>
+      <h1 class="header">Spoiler Avoider</h1>
+      <p class="p2">
+        Timestamps Off / On
+        <label class="switch">
+          <input type="checkbox" name="checkbox_timestamps" checked />
+          <span class="slider round"></span>
+        </label>
+      </p>
+      <p class="p2">
+        Titles Off / On
+        <label class="switch">
+          <input type="checkbox" name="checkbox_timestamps" checked />
+          <span class="slider round"></span>
+        </label>
+      </p>
+      <p class="p2">
+        Vod Progress Bar Off / On
+        <label class="switch">
+          <input type="checkbox" name="checkbox_timestamps" checked />
+          <span class="slider round"></span>
+        </label>
+      </p>
     </div>
-    <div id="error-content" class="hidden">
-      <p>Can't hide these sorry.</p>
-    </div>
+    <p class="p2" style="text-align: center">
+      <a
+        href="https://github.com/bafox2/Disable-Twitch-Spoilers"
+        target="_blank"
+        ><img
+          class="github"
+          src="github.svg"
+          alt="Github"
+          height="42px"
+          width="42px"
+      /></a>
+    </p>
+
     <script src="menu.js"></script>
   </body>
 </html>
