--- a/popup/menu.html
+++ b/popup/menu.html
@@ -18,14 +18,14 @@
       <p class="p2">
         Titles Off / On
         <label class="switch">
-          <input type="checkbox" name="checkbox_timestamps" checked />
+          <input type="checkbox" name="checkbox_titles" checked />
           <span class="slider round"></span>
         </label>
       </p>
       <p class="p2">
         Vod Progress Bar Off / On
         <label class="switch">
-          <input type="checkbox" name="checkbox_timestamps" checked />
+          <input type="checkbox" name="checkbox_percentages" checked />
           <span class="slider round"></span>
         </label>
       </p>
