changed variable names

--- a/popup/menu.html
+++ b/popup/menu.html
@@ -11,21 +11,28 @@
       <p class="p2">
         Timestamps Off / On
         <label class="switch">
-          <input type="checkbox" name="checkbox_timestamps" checked />
+          <input type="checkbox" name="checkbox_timestamps" />
           <span class="slider round"></span>
         </label>
       </p>
       <p class="p2">
         Titles Off / On
         <label class="switch">
-          <input type="checkbox" name="checkbox_titles" checked />
+          <input type="checkbox" name="checkbox_titles" />
           <span class="slider round"></span>
         </label>
       </p>
       <p class="p2">
         Vod Progress Bar Off / On
         <label class="switch">
-          <input type="checkbox" name="checkbox_percentages" checked />
+          <input type="checkbox" name="checkbox_percentages" />
+          <span class="slider round"></span>
+        </label>
+      </p>
+      <p class="p2">
+        Image Previews Off / On
+        <label class="switch">
+          <input type="checkbox" name="checkbox_preview" />
           <span class="slider round"></span>
         </label>
       </p>
